Quorum3/Library/Tests/Inheritance/Pass/AssignToParentsVariable.quorum
//use Test1

class Main 
    action Main
        Test1 t
        output t:x
        output t:parent:Test2:y
        //t:Set(117)
        //output t:Get()
        //output t:parent:Test2:y
    end
end