Quorum3/Library/Tests/Inheritance/Fail/Test1.quorum
use Test2

class Test1 is Test2
    public integer x = 6

    action Set(integer y)
        parent:Test2:y = y
    end

    action Get returns integer
        return parent:Test2:y 
    end
end